--- a/ejemplos_clase/docker-compose.yml
+++ b/ejemplos_clase/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.3"
 # Este es un archivo de docker-compose.yml para configurar el uso de contenedores de software.
 
 services:
-
   db:
     # Este servicio crea una base de datos de tipo Postgres.
     image: postgres:13.2
@@ -12,7 +11,6 @@ services:
       # Aquí se enlaza el contenido de dentro del contenedor con el directorio en nuestra PC
       # de esa manera lo que guardemos en la base de datos va a quedar accesible en nuestra carpeta.
       - ./database:/var/lib/postgresql/data
-
     environment:
       # Postgres nos exige que establezcamos un usuario por defecto, esto se hace por medio
       # de variables de entorno. Según el hub de Postgres:
@@ -31,7 +29,6 @@ services:
     image: adminer:4.8.0
     restart: always
     ports:
-
       - 8080:8080
     # depends_on indica que este servicio depende de que primero inicie "db"
     depends_on: ["db"]
@@ -57,5 +54,6 @@ services:
     # Control de consola:
     stdin_open: true
     tty: true
-    
     command: python marvel/manage.py runserver 0.0.0.0:8000
+    depends_on:
+      - db
